<resources>
    <string name="app_name">RawG Example</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hey, Friend</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_image">Home</string>

    <string name="game_name">Game Name</string>
    <string name="name_label">Name:</string>
    <string name="release_label">Release:</string>
    <string name="ratings_label">Ratings:</string>
    <string name="description_label">Description:</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="logout">Logout</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_search_images">Home</string>
    <string name="details">Details</string>
    <string name="menu_password">Change Password</string>
    <string name="string_hello">Hello,</string>
    <string name="string_search">Search</string>
    <string name="string_search_products">Search for products</string>

    <string name="open">open</string>
    <string name="close">close</string>
</resources>