<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mvvm.ui.gallery.GalleryFragment"
        android:label="@string/menu_search_images"
        tools:layout="@layout/fragment_search_image">

        <action
            android:id="@+id/actionGameToGameDetail"
            app:destination="@id/nav_game_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_game_detail"
        android:name="com.example.mvvm.ui.gamedetail.GalleryFragment"
        android:label="@string/menu_search_images"
        tools:layout="@layout/fragment_game_details">
        <argument
            android:name="gameID"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mvvm.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.example.mvvm.ui.password.ChangePasswordFragment"
        android:label="@string/menu_password"
        tools:layout="@layout/fragment_change_password" />
</navigation>